--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>A Brand New nanoc Site - <%= @item[:title] %></title>
+    <title>nvALT-guide - <%= @item[:title] %></title>
     <link rel="stylesheet" href="/css/screen.css">
-
-    <!-- you don't need to keep this, but it's cool for stats! -->
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
+    
   </head>
   <body>
     <div id="main">
