--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,27 +2,37 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>nvALT-guide - <%= @item[:title] %></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=0">
     <link rel="stylesheet" href="/css/screen.css">
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
-    
+    <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
     <div id="main">
       <%= yield %>
     </div>
     <div id="sidebar">
-      <h2>Documentation</h2>
+      <h2>Chapitres</h2>
       <ul>
-        <li><a href="http://nanoc.ws/docs/">Documentation</a></li>
-        <li><a href="http://nanoc.ws/docs/tutorial/">Getting Started</a></li>
-      </ul>
-      <h2>Community</h2>
-      <ul>
-        <li><a href="http://groups.google.com/group/nanoc/">Discussion Group</a></li>
-        <li><a href="irc://chat.freenode.net/#nanoc">IRC Channel</a></li>
-        <li><a href="http://github.com/nanoc/nanoc/wiki/">Wiki</a></li>
+        <li><a href="">Introduction</a></li>
+        <li><a href="">nvALT:&nbsp;avantages</a></li>
       </ul>
     </div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery.js"><\/script>')</script>
+        <script src="js/plugins.js"></script>
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src='//www.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>
   </body>
 </html>
