--- a/layouts/default.html
+++ b/layouts/default.html
@@ -17,8 +17,8 @@
     <div id="sidebar">
       <h2>Chapitres</h2>
       <ul>
-        <li><a href="">Introduction</a></li>
-        <li><a href="">nvALT:&nbsp;avantages</a></li>
+        <li><a href="/">Introduction</a></li>
+        <li><a href="/avantages">nvALT:&nbsp;avantages</a></li>
       </ul>
     </div>
 
