--- a/layouts/default.html
+++ b/layouts/default.html
@@ -1,15 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="fr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>nvALT-guide - <%= @item[:title] %></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=0">
-    <link rel="stylesheet" href="/css/screen.css">
-    <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
-    <script src="js/vendor/modernizr.js"></script>
-  </head>
+<%= render 'head' %>
   <body>
     <div id="main">
       <%= yield %>
@@ -17,17 +6,6 @@
 
     <%= render 'sidebar' %>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
+<%= render 'foot' %>
   </body>
 </html>
