--- a/layouts/sidebar.html
+++ b/layouts/sidebar.html
@@ -3,5 +3,17 @@
       <ul>
         <li><a href="/">Introduction</a></li>
         <li><a href="/avantages">nvALT:&nbsp;avantages</a></li>
+        <li><a href="/installation">Install et config</a></li>
+        <li><a href="/bases">Les bases</a></li>
+        <li><a href="/organisation">Organiser ses notes</a></li>
+        <li><a href="/tags">Tags et liens internes</a></li>
+        <li><a href="/recherche">Recherche</a></li>
+        <li><a href="/visuel">Prévisualisation et export</a></li>
+        <li><a href="/tri">Tri et archivage</a></li>
+        <li><a href="/concentration">Mode auteur</a></li>
+        <li><a href="/astuces">Astuces</a></li>
+        <li><a href="/apps">Applications</a></li>
+        <li><a href="/approfondir">Aller plus loin</a></li>
+        <li><a href="/merci">Remerciements</a></li>
       </ul>
     </div>
