--- a/layouts/head.html
+++ b/layouts/head.html
@@ -8,5 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=0">
     <link rel="stylesheet" href="/css/screen.css">
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
+    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ovo' rel='stylesheet' type='text/css'>
     <script src="js/vendor/modernizr.js"></script>
   </head>
